--- a/.github/workflows/android_build.yml
+++ b/.github/workflows/android_build.yml
@@ -1,23 +1,38 @@
 name: project Build
 
-on: push
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+      branches: [ main ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v1
-
-      - name: Set Up JDK
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v2
+      - name: set up JDK 11
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.11
+          java-version: 11
+      - name: Prepare script
+        run: chmod +x .github/scripts/gradlew_recursive.sh
 
-      - name: Build Project
-        run: ./gradlew assemble
+      - name: Build project
+        run: .github/scripts/gradlew_recursive.sh assembleDebug
 
-      - name: Run Tests
-        run: ./gradlew test
+      - name: Test project
+        run: .github/scripts/gradlew_recursive.sh testDebug
 
-      - name: Lint Checks
+      - name: Code Coverage Checks
         run: ./gradlew detekt ktlintCheck lint
+
+      - name: Zip artifacts
+        run: zip -r assemble.zip . -i '**/build/*.apk' '**/build/*.aab' '**/build/*.aar' '**/build/*.so'
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v1
+        with:
+          name: assemble
+          path: assemble.zip
